# ml_deploy

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
ml_deploy/: __init__.py  dataset.py  features.py  plots.py
ml_deploy/modeling/: predict.py  train.py
src/app/: main.py
