[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_deploy"
version = "0.0.1"
description = "Studying about ml models deployment"
authors = [
  { name = "Carlos Eduardo A. Marchiori" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ml_deploy"]
include = ["pyproject.toml", "ml_deploy/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml_deploy"]
force-sort-within-sections = true

